--- a/TheFoodLab/TheFoodLab.csproj
+++ b/TheFoodLab/TheFoodLab.csproj
@@ -109,7 +109,7 @@
     <Compile Include="Controllers\BackOfficeController.cs" />
     <Compile Include="Models\BD.cs" />
     <Compile Include="Controllers\FrontController.cs" />
-    <Compile Include="Models\Moderadores.cs" />
+    <Compile Include="Models\Receta.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -131,7 +131,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Default\" />
     <Folder Include="Views\Front\" />
     <Folder Include="Views\Home\" />
   </ItemGroup>
