--- a/TheFoodLab/TheFoodLab.csproj
+++ b/TheFoodLab/TheFoodLab.csproj
@@ -123,6 +123,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\BackOffice\Login.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+    <Content Include="Views\ViewPage1.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
