--- a/TheFoodLab/TheFoodLab.csproj
+++ b/TheFoodLab/TheFoodLab.csproj
@@ -128,6 +128,7 @@
     <Content Include="Views\BackOffice\BMReceteros.cshtml" />
     <Content Include="Views\BackOffice\ABMTiposDeComidas.cshtml" />
     <Content Include="Views\BackOffice\BMRecetas.cshtml" />
+    <Content Include="Views\Front\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -137,7 +138,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Front\" />
     <Folder Include="Views\Home\" />
   </ItemGroup>
   <PropertyGroup>
