--- a/TheFoodLab/TheFoodLab.csproj
+++ b/TheFoodLab/TheFoodLab.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Controllers\FrontController.cs" />
     <Compile Include="Models\Moderadores.cs" />
     <Compile Include="Models\Receta.cs" />
+    <Compile Include="Models\TiposComida.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
